feat: Navbar 링크 이동 기능 구현, util path alias 설정 #6
navbar 메뉴 클릭 시 이동 및 볼드 처리
util 폴더 path alias 추가 설정

--- a/front/jsconfig.json
+++ b/front/jsconfig.json
@@ -1,12 +1,13 @@
 {
-    "compilerOptions": {
-      "baseUrl": ".",
-      "paths": {
-        "@api/*": ["src/api/*"],
-        "@assets/*": ["src/assets/*"],
-        "@components/*": ["src/components/*"],
-        "@pages/*": ["src/pages/*"],
-      }
-    },
-    "exclude": ["node_modules", "dist"]
-  }
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@api/*": ["src/api/*"],
+      "@assets/*": ["src/assets/*"],
+      "@components/*": ["src/components/*"],
+      "@pages/*": ["src/pages/*"],
+      "@util/*": ["src/util/*"]
+    }
+  },
+  "exclude": ["node_modules", "dist"]
+}
