--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/cife?useSSL=false&serverTimezone=Asia/Seoul
 spring.datasource.username=root
-spring.datasource.password=151797
+spring.datasource.password=ktds2024
 
 # MyBatis
 mybatis.config-location=classpath:/mybatis-config.xml
