--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.21.3",
+    "react-spinners": "^0.13.8",
     "swiper": "^11.0.6"
   },
   "devDependencies": {
